[package]
name = "dkregistry"
version = "0.3.0-alpha.0"
authors = ["Luca Bruno <lucab@debian.org>", "Stefan Junker <sjunker@redhat.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/dkregistry"
repository = "https://github.com/camallo/dkregistry-rs"
description = "A pure-Rust asynchronous library for Docker Registry API"
keywords = ["docker", "registry", "async"]
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
base64 = "0.10"
error-chain = { version = "0.12", default-features = false }
futures = "0.1"
http = "0.1"
libflate = "0.1"
log = "0.4"
mime = "0.3"
mockito = { version = "0.17", optional = true }
regex = "^1.1.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
strum = "0.15"
strum_macros = "0.15"
tar = "0.4"
tokio = "0.1"
dirs = "1.0"
reqwest = { version = "^0.9.6", default-features = false }
sha2 = "^0.8.0"

[dev-dependencies]
env_logger = "0.6"
spectral = "0.6"

[features]
default = ["reqwest-default-tls"]
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
test-net = []
test-mock = ["mockito"]

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-publish = true
disable-push = true
pre-release-commit-message = "cargo: dkregistry release {{version}}"
pro-release-commit-message = "cargo: version bump to {{version}}"
