[package]
name = "dockreg"
rust-version = "1.70.0"
version = "0.5.1-alpha.0"
authors = ["Bryant Biggs <bryantbiggs@gamil.com>", "Luca Bruno <lucab@debian.org>", "Stefan Junker <sjunker@redhat.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/dockreg"
repository = "https://github.com/clowdhaus/dockreg-rs"
description = "A pure-Rust asynchronous library for Docker Registry API"
keywords = ["docker", "registry", "async"]
exclude = [
".gitignore",
]
edition = "2018"

[package.metadata.release]
disable-publish = true
disable-push = true
post-release-commit-message = "cargo: development version bump"
pre-release-commit-message = "cargo: dockreg release {{version}}"
sign-commit = true
sign-tag = true
tag-message = "dockreg v{{version}}"

[dependencies]
base64 = "0.13"
futures = "0.3"

# Pin libflate <1.3.0
# https://github.com/sile/libflate/commit/aba829043f8a2d527b6c4984034fbe5e7adb0da6
# derives default on enum, which was not stabilized until 1.62
# (https://github.com/rust-lang/rust/pull/94457)
# This can be relaxed when MSRV is at least 1.62
libflate = "<1.3.0"

log = "0.4"
mime = "0.3"
regex = "^1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_ignored = "0.1"
strum = "0.23"
strum_macros = "0.23"
tar = "0.4"
tokio = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
sha2 = "^0.10.0"
bytes = "1.1"
pin-project = "1.0"
async-stream = "0.3"
thiserror = "1.0.19"
url = "2.1.1"

[dev-dependencies]
dirs = "4.0"
env_logger = "0.8"
hyper = "0.14.28"
mockito = "0.30"
native-tls = "0.2"
spectral = "0.6"
test-case = "1.0.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


[features]
default = ["reqwest-default-tls"]
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
test-net = []
test-net-private = []
test-mock = []
